IINT-7846: stop overflow on file manager

--- a/less/moodle/filemanager.less
+++ b/less/moodle/filemanager.less
@@ -63,7 +63,7 @@
     overflow: auto;
     display: inline-block;
     float: left;
-    height: 495px;
+    height: 485px;
     border-right: 1px solid @modal-header-border-color;
 }
 .dir-rtl .file-picker .fp-repo-area {
@@ -91,7 +91,7 @@
     background: @modal-content-bg;
     clear: both;
     overflow: auto;
-    height: 455px;
+    height: 415px;
 }
 .filepicker.moodle-dialogue-fullscreen .file-picker .fp-content {
     width: 100%;
